# gd-ai

./: README.md  run.sh
project/: MicRecord.gd  ai.tscn  ai_tools.gdextension  default_bus_layout.tres  extension_list.cfg  icon.svg.import  project.godot
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs  main.rs  resample.rs  token.rs
rust/src/model/: mod.rs
